; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regedit.c_error_unknown_switch.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_regedit.c_error_unknown_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i32] [i32 37, i32 115, i32 58, i32 32, i32 85, i32 110, i32 100, i32 101, i32 102, i32 105, i32 110, i32 101, i32 100, i32 32, i32 115, i32 119, i32 105, i32 116, i32 99, i32 104, i32 32, i32 47, i32 37, i32 99, i32 33, i32 10, i32 0], align 4
@.str.1 = private unnamed_addr constant [73 x i32] [i32 37, i32 115, i32 58, i32 32, i32 65, i32 108, i32 112, i32 104, i32 97, i32 98, i32 101, i32 116, i32 105, i32 99, i32 32, i32 99, i32 104, i32 97, i32 114, i32 97, i32 99, i32 116, i32 101, i32 114, i32 32, i32 105, i32 115, i32 32, i32 101, i32 120, i32 112, i32 101, i32 99, i32 116, i32 101, i32 100, i32 32, i32 97, i32 102, i32 116, i32 101, i32 114, i32 32, i32 39, i32 37, i32 99, i32 39, i32 32, i32 105, i32 110, i32 32, i32 115, i32 119, i32 105, i32 116, i32 99, i32 104, i32 32, i32 115, i32 112, i32 101, i32 99, i32 105, i32 102, i32 105, i32 99, i32 97, i32 116, i32 105, i32 111, i32 110, i32 10, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @error_unknown_switch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @error_unknown_switch(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @iswalpha(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32, i32* @stderr, align 4
  %10 = call i8* (...) @getAppName()
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @fwprintf(i32 %9, i8* bitcast ([27 x i32]* @.str to i8*), i8* %10, i32 %11)
  br label %20

13:                                               ; preds = %2
  %14 = load i32, i32* @stderr, align 4
  %15 = call i8* (...) @getAppName()
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 -1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @fwprintf(i32 %14, i8* bitcast ([73 x i32]* @.str.1 to i8*), i8* %15, i32 %18)
  br label %20

20:                                               ; preds = %13, %8
  %21 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i64 @iswalpha(i32) #1

declare dso_local i32 @fwprintf(i32, i8*, i8*, i32) #1

declare dso_local i8* @getAppName(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
